<resources>
    <string name="app_name">Skisip Wallet</string>
    <string name="e_wallet">E-wallet</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="not_registered_create_your_account">Not Registered| Create your Account</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">Register</string>
    <string name="already_regiser_login_here">Already regiser| Login here</string>
    <string name="todo">TODO</string>

</resources>