<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="139dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/txtV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_logo"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="155dp"
        android:text="@string/e_wallet"
        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/namelayout">

        <EditText
            android:id="@+id/etusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            tools:ignore="SpeakableTextPresentCheck" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_below="@id/namelayout"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:id="@+id/emaillayout">

        <EditText
            android:id="@+id/etemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_below="@id/emaillayout"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:id="@+id/passwordlayout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#000">

        <EditText
            android:id="@+id/etpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />


    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_below="@id/passwordlayout"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:id="@+id/Cpasswordlayout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#000">

        <EditText
            android:id="@+id/etCpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />


    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Cpasswordlayout"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:background="#3BB5EC"
        android:text="@string/register"
        android:textColor="#fff"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/loginlink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnregister"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="@string/already_regiser_login_here" />

</RelativeLayout>